--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "node --watch index.js",
+    "watch": "nodemon index.js",
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --runInBand",
     "test:watch": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --watch",
     "test:coverage": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --coverage --runInBand",
@@ -47,6 +48,7 @@
     "cross-env": "^10.1.0",
     "jest": "^30.2.0",
     "jest-mock-extended": "^4.0.0",
+    "nodemon": "^3.0.0",
     "supertest": "^7.1.4"
   }
 }
